feat: qualify knowledge-backed safe drafts